           also be used with CMF (if FileSystemSite is not installed).

         * Formulator forms should have better updating behavior from
           the filesystem in development mode. (This is buggy, so disabled)

         * FSForm gets automatically registered with the directory
           view system if CMF or FileSystemSite is installed.

  1.5.0

    Features Added

      - Added ProductForm, which provides a wrapping around
        Formulator.BasicForm, allowing it to be created inside a
        product but used outside it.

      - Allow turning off of XML prologue section.

      - Optimization of TALESMethod by caching compiled expression.
        This speeds SilvaMetadata indexing up by a lot if a fallback
        on default is made, especially in the case of Python
        expressions, as it avoids lots of compilation overhead.

      - Extra attribute defined for list/multicheckbox/radio fields
        called 'extra_item', which allows setting HTML attributes to
        individual list item/checkbox/radio button.

    Bugs Fixed

      - XML serialization should be more consistent now; field properties
        are now ordered by name upon serialization.
 
      - Allow XML export of BasicForm.

  1.4.2
  
    Bugs Fixed

      - Sticky forms should now work correctly in the presence of unicode.
        Encoded data is automatically converted to unicode if the information
        is pulled from the REQUEST form.

  1.4.1

    Bugs Fixed

      - It was not possible to make DateTime fields not required when
        'allow_empty_time' was enabled. Fixed.

  1.4.0

    Features Added

      - Added limited ability to output unicode for selected
        fields. Only works properly in Zope 2.6.x, and the HTML pages
        these forms are in need an output encoding set (such as
        UTF-8, which is also Formulator's default encoding). If
        'unicode' checkbox is checked Formulator will try to interpret