@@ -58,6 +58,8 @@ def initialize(context):
                                 'www/FileField.gif')
     FieldRegistry.registerField(StandardFields.LinkField,
                                 'www/LinkField.gif')
+    FieldRegistry.registerField(StandardFields.LabelField,
+                                'www/LabelField.gif')
     
     # some helper fields
     FieldRegistry.registerField(HelperFields.ListTextAreaField)
